kubernetes/controller/admission-server/config/deploy.yaml
# webhook handling server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-kubernetes-webhook
  namespace: default
spec:
  selector:
    matchLabels:
      app: simple-kubernetes-webhook
  template:
    metadata:
      labels:
        app: simple-kubernetes-webhook
    spec:
      containers:
        - image: simple-kubernetes-webhook:latest
          name: simple-kubernetes-webhook
          volumeMounts:
            - name: tls
              mountPath: "/etc/admission-webhook/tls"
      volumes:
        - name: tls
          secret:
            secretName: simple-kubernetes-webhook-tls
---
apiVersion: v1
kind: Service
metadata:
  name: simple-kubernetes-webhook
  namespace: default
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 443
  selector:
    app: simple-kubernetes-webhook
---
# Kubernetes에 이 서버로 webhook을 보내달라고 요청하기 위한 오브젝트
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "simple-kubernetes-webhook.acme.com"
webhooks:
  - name: "simple-kubernetes-webhook.acme.com"
   # 이런식의 selector 사용이 가능하다는 것만 알아두자
   #namespaceSelector:
   #  matchLabels:
   #    admission-webhook: enabled
    rules:
     # pod 생성시
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE"]
        resources: ["pods"]
        scope: "*"
    clientConfig:
      service:
        namespace: default
        name: simple-kubernetes-webhook
        path: /validate-pods
        port: 443
      caBundle: |
        LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURRekNDQWl1Z0F3SUJBZ0lVQldDTWJIWSsvUHJj
[...]
    admissionRevewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 2
---
# Kubernetes에 이 서버로 webhook을 보내달라고 요청하기 위한 오브젝트
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: "simple-kubernetes-webhook.acme.com"
webhooks:
  - name: "simple-kubernetes-webhook.acme.com"
   # 이런식의 selector 사용이 가능하다는 것만 알아두자
   #namespaceSelector:
   #  matchLabels:
   #    admission-webhook: enabled
    rules:
     # pod 생성시
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE"]
        resources: ["pods"]
        scope: "*"
    clientConfig:
      service:
        namespace: default
        name: simple-kubernetes-webhook
        path: /mutate-pods
        port: 443
      caBundle: |
        LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURRekNDQWl1Z0F3SUJBZ0lVQldDTWJIWSsvUHJj
[...]
    admissionRevewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 2
---
